--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <app-navbar />
 
-<div class="h-[calc(100vh-64px)] overflow-hidden">
-    <app-sidenav />
+<div [style.background]="'var(--mat-sys-background)'">
+    <app-sidenav  />
 </div>
