--- a/src/app/components/shared/analysis-card/analysis-card.html
+++ b/src/app/components/shared/analysis-card/analysis-card.html
@@ -1,5 +1,5 @@
   <div class="list-container">
-    @for (card of cards(); track card) {
+    @for (card of cards(); track card.title) {
     <mat-card appearance="outlined">
       <mat-card-header>
         <div class="w-full flex items-start justify-between">
