--- a/src/app/components/sidenavContainer/sidenav/sidenav.html
+++ b/src/app/components/sidenavContainer/sidenav/sidenav.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="h-full">
+<mat-sidenav-container class="h-full max-w-[1200px] mx-auto overflow-hidden">
   @if (authService.isLoggedIn()) {
   <mat-sidenav mode="side" [(opened)]="utility.opened" class="max-w-[200px]">
     <mat-list class="h-full !px-2 !py-4">
