--- a/src/app/components/auth/login/login.html
+++ b/src/app/components/auth/login/login.html
@@ -12,6 +12,13 @@
           <mat-label>Email</mat-label>
           <input matInput placeholder="Your Email" formControlName="email" />
           <mat-icon matSuffix fontIcon="person"></mat-icon>
+
+          @if (loginForm.get('email')?.touched && loginForm.get('email')?.dirty) {
+          <mat-error>
+            @if (loginForm.get('email')?.errors?.['required']) { Email is **required**. } @if
+            (loginForm.get('email')?.errors?.['pattern']) { Invalid email. }
+          </mat-error>
+          }
         </mat-form-field>
       </p>
       <p>
@@ -19,11 +26,26 @@
           <mat-label>Password</mat-label>
           <input matInput type="password" placeholder="Your Password" formControlName="password" />
           <mat-icon matSuffix fontIcon="key"></mat-icon>
+
+          @if (loginForm.get('password')?.touched && loginForm.get('password')?.dirty) {
+          <mat-error>
+            @if (loginForm.get('password')?.errors?.['required']) { Password is **required**. }
+          </mat-error>
+          }
         </mat-form-field>
       </p>
     </mat-dialog-content>
     <mat-dialog-actions>
-      <button matButton="filled" class="mx-auto w-full" type="submit" [disabled]="loginForm.invalid">Login</button>
+      <button
+        matButton="filled"
+        class="mx-auto w-full"
+        type="submit"
+        [disabled]="loginForm.invalid || isLoading()"
+      >
+        Login @if (isLoading()){
+        <mat-icon fontIcon="sync" class="animate-spin"></mat-icon>
+        }
+      </button>
     </mat-dialog-actions>
   </form>
   <p class="text-sm self-center" [style.color]="'var(--mat-sys-inverse-surface)'">
