--- a/src/app/components/dashboardContainer/dashboard/dashboard.html
+++ b/src/app/components/dashboardContainer/dashboard/dashboard.html
@@ -2,8 +2,8 @@
   <mat-toolbar class="!h-full !p-0">
     <div class="w-full my-7 flex flex-wrap items-start justify-between gap-3">
       <div>
-        <h2 class="text-2xl !font-bold">Welcome back, {{ user() }}</h2>
-        <p class="subtext text-[15px]">Here's what's happening with your projects today</p>
+        <h2 class="text-2xl !font-bold whitespace-normal">Welcome back, {{ userService.user()?.firstName | titlecase }}</h2>
+        <p class="subtext text-[15px] whitespace-normal">Here's what's happening with your projects today</p>
       </div>
 
       <button matButton="filled" (click)="openNewProjectDialog()">
@@ -13,7 +13,7 @@
     </div>
   </mat-toolbar>
 
-  <app-analysis-card [cards]="cards" />
+  <app-analysis-card [cards]="cards()" />
 
   <div class="mt-7 flex flex-col gap-3 lg:flex-row">
     <app-projects-table class="flex-3" />
