--- a/src/app/components/projectsContainer/projectDetailContainer/project-settings/project-settings.html
+++ b/src/app/components/projectsContainer/projectDetailContainer/project-settings/project-settings.html
@@ -6,61 +6,66 @@
       </mat-card-header>
       <mat-card-content>
         <div class="flex flex-col gap-3">
-          <form class="flex flex-col gap-5">
-            <mat-form-field>
-              <mat-label>Project name</mat-label>
-              <input matInput value="Kubernetes Migration" />
-            </mat-form-field>
+          <form [formGroup]="projectForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-5">
+            <app-form-fields [type]="'project'"></app-form-fields>
 
-            <mat-form-field>
-              <mat-label>Description</mat-label>
-              <textarea matInput>
-Migrate the monolithic app infrastructure to Kubernetes for scalability.</textarea
-              >
-            </mat-form-field>
-
-            <div class="flex items-center flex-wrap gap-3 mt-7">
+            <div class="flex items-center justify-between flex-wrap gap-3 mt-7">
               <mat-form-field>
-                <mat-label>All Priority</mat-label>
-                <mat-select>
-                  @for (priority of priorities; track priority) {
-                  <mat-option [value]="priority.value">{{ priority.viewValue }}</mat-option>
-                  }
-                </mat-select>
-              </mat-form-field>
-
-              <mat-form-field>
-                <mat-label>All Status</mat-label>
-                <mat-select>
-                  @for (s of status; track s) {
+                <mat-label>Status</mat-label>
+                <mat-select formControlName="status">
+                  @for (s of statuses; track s) {
                   <mat-option [value]="s.value">{{ s.viewValue }}</mat-option>
                   }
                 </mat-select>
-              </mat-form-field>
-            </div>
-
-            <div class="flex items-center flex-wrap gap-3 mt-7">
-              <mat-form-field>
-                <mat-label>Start date</mat-label>
-                <input matInput [matDatepicker]="picker1" />
-                <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker1"></mat-datepicker-toggle>
-                <mat-datepicker #picker1></mat-datepicker>
+                @if (projectForm.get('status')?.invalid && (projectForm.get('status')?.dirty ||
+                projectForm.get('status')?.touched)) {
+                <mat-error>
+                  @if (projectForm.get('status')?.errors?.['required']) { Status is **required**. }
+                </mat-error>
+                }
               </mat-form-field>
 
               <mat-form-field>
-                <mat-label>End date</mat-label>
-                <input matInput [matDatepicker]="picker2" />
+                <mat-label>Due Date</mat-label>
+                <input matInput [matDatepicker]="pickerEnd" formControlName="dueDate" />
+                @if (projectForm.get('dueDate')?.invalid && (projectForm.get('dueDate')?.dirty ||
+                projectForm.get('dueDate')?.touched)) {
+                <mat-error>
+                  @if (projectForm.get('dueDate')?.errors?.['required']) { Due date is **required**.
+                  }
+                </mat-error>
+                }
                 <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
+                <mat-datepicker-toggle matIconSuffix [for]="pickerEnd"></mat-datepicker-toggle>
+                <mat-datepicker #pickerEnd></mat-datepicker>
               </mat-form-field>
             </div>
 
-            <button matButton="filled" class="self-start">
-              <mat-icon>save</mat-icon>
-              Save Changes
-            </button>
+            <div class="flex flex-wrap gap-2 items-center justify-between">
+              <button
+                matButton="filled"
+                class="self-start"
+                type="submit"
+                [disabled]="projectForm.invalid || isLoading()"
+              >
+                @if(!isLoading()){
+                <mat-icon fontIcon="save"></mat-icon>
+                } @else{
+                <mat-icon fontIcon="sync" class="animate-spin"></mat-icon>
+                } Save Changes
+              </button>
+
+              <button
+                matButton="filled"
+                type="button"
+                class="w-fit delete-btn"
+                (click)="onDelete()"
+              >
+                @if(isDeleteLoading()){
+                <mat-icon fontIcon="sync" class="animate-spin"></mat-icon>
+                } Delete
+              </button>
+            </div>
           </form>
         </div>
       </mat-card-content>
@@ -70,23 +75,47 @@ Migrate the monolithic app infrastructure to Kubernetes for scalability.</textar
   <div class="flex-1 overdue-card">
     <mat-card appearance="outlined">
       <mat-card-header>
-        <h2 class="text-[14px] pb-2 flex items-center gap-3" [style.color]="'var(--mat-sys-on-error-container)'">
+        <h2
+          class="text-[14px] pb-2 flex items-center gap-3"
+          [style.color]="'var(--mat-sys-on-error-container)'"
+        >
           <mat-icon class="!min-w-fit">schedule</mat-icon>
-          Overdue Tasks(2)
+          Overdue Tasks({{ overdueTasks().length }})
         </h2>
       </mat-card-header>
       <mat-card-content>
         <div class="flex flex-col gap-3">
-          <div class="rounded-md overflow-hidden p-1" [style.background]="'var(--mat-sys-error-container)'">
-            <p class="p-2 rounded-md mb-2" [style.background]="'var(--mat-sys-error2-container)'">Implement CI/CD with GitHub Actions</p>
-            <p class="due-date text-[12px]" [style.color]="'var(--mat-sys-on-error-container)'">Due <span>Oct 25, 2025</span></p>
-          </div>
-          <div class="rounded-md overflow-hidden p-1" [style.background]="'var(--mat-sys-error-container)'">
-            <p class="p-2 rounded-md mb-2" [style.background]="'var(--mat-sys-error2-container)'">Some other expired task</p>
-            <p class="due-date text-[12px]" [style.color]="'var(--mat-sys-on-error-container)'">Due <span>Jan 5, 2026</span></p>
-          </div>
+          @for (task of overdueTasks(); track task.id) {
+            <div
+              class="rounded-md overflow-hidden p-1"
+              [style.background]="'var(--mat-sys-error-container)'"
+            >
+              <p class="p-2 rounded-md mb-2" [style.background]="'var(--mat-sys-error2-container)'">
+                {{ task.title }}
+              </p>
+              <p class="due-date text-[12px]" [style.color]="'var(--mat-sys-on-error-container)'">
+                Due <span>{{ task.dueDate }}</span>
+              </p>
+            </div>
+          }
         </div>
       </mat-card-content>
     </mat-card>
+
+
+  @if(overdueTasks().length <= 0){
+  <p [style.color]="'var(--mat-sys-error2-container)'" class="mt-4 text-center">Table is empty.</p>
+  } @else{
+  <mat-paginator
+    class="mx-auto mt-7 w-fit"
+    [length]="totalElements()"
+    [pageSize]="partialParams.size"
+    [pageIndex]="partialParams.page - 1"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    (page)="onPageChange($event)"
+    aria-label="Select page"
+  >
+  </mat-paginator>
+  }
   </div>
 </div>
