--- a/src/app/components/projectsContainer/projects/projects.html
+++ b/src/app/components/projectsContainer/projects/projects.html
@@ -1,21 +1,17 @@
 <div class="p-4">
   <mat-toolbar class="!p-0 !my-7 !h-full">
     <div class="w-full flex flex-col items-start gap-4 sm:flex-row sm:justify-between">
-      <form class="w-[60%] min-w-[300px]">
+      <form class="w-[100%] sm:w-[40%] sm:min-w-[250px]" (ngSubmit)="search(searchField)">
         <div class="flex items-center p-1 rounded-sm border">
           <mat-icon class="opacity-60">search</mat-icon>
           <input
             type="search"
             placeholder="Search projects..."
             class="text-sm p-1 outline-none placeholder:opacity-60 flex-1"
+            #searchField
           />
         </div>
       </form>
-
-      <!-- <div class="text-sm">
-                <label>Sort by: </label>
-                <a href="" class="underline font-bold" (click)="sortByDueDate($event)" [ngClass]="{'text-blue-600': active()}">Due date</a>
-            </div> -->
 
       <button matButton="filled" (click)="openNewProjectDialog()">
         New Project
@@ -28,8 +24,30 @@
     <h2 class="font-bold text-2xl">Projects</h2>
     <p class="mb-7 text-gray-500">Manage and track your projects</p>
 
-    <app-priority-status />
+    <button
+      matButton
+      class="text-sm flex items-start mb-2"
+      [style.background]="
+        isFilterOn()
+          ? 'var(--mat-sys-primary-fixed-dim)'
+          : 'var(--mat-sys-surface-container-highest)'
+      "
+      [disabled]="!isFilterOn()" 
+      (click)="reset()"
+    >
+      <mat-icon fontIcon="all_inbox" class="!text-sm !h-fit !w-fit"></mat-icon>
+      All
+    </button>
 
-    <app-project-card />
+    <app-project-card
+      [projects]="projects()"
+      [partialParams]="partialParams"
+      [totalElements]="totalElements()"
+      [totalPages]="totalPages()"
+      [isLoading]="isLoading()"
+      [isSearchLoading]="isSearchLoading()"
+      (onClick)="onPageChange($event)"
+    >
+    </app-project-card>
   </div>
 </div>
