--- a/src/app/components/tasksContainer/new-task/new-task.html
+++ b/src/app/components/tasksContainer/new-task/new-task.html
@@ -1,9 +1,38 @@
-<app-project-task-form-project header="New Task" type="task" buttonName="Add Task" icon="add_circle">
-  <mat-form-field>
-    <mat-label>Due Date</mat-label>
-    <input matInput [matDatepicker]="picker" />
-    <mat-hint>MM/DD/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
-</app-project-task-form-project>
+<div class="flex flex-col p-2" [style.background]="'var(--mat-sys-surface-container-highest)'">
+  <button matIconButton matDialogClose class="self-end">
+    <mat-icon fontIcon="close"></mat-icon>
+  </button>
+
+  <h2 matDialogTitle class="!font-bold">New Task</h2>
+
+  <form [formGroup]="newTaskForm" (ngSubmit)="onSubmit()">
+    <mat-dialog-content>
+      <app-form-fields [type]="'task'"></app-form-fields>
+
+      <mat-form-field>
+        <mat-label>Due Date</mat-label>
+        <input matInput [matDatepicker]="picker" formControlName="dueDate" />
+        @if (newTaskForm.get('dueDate')?.invalid && (newTaskForm.get('dueDate')?.dirty ||
+        newTaskForm.get('dueDate')?.touched)) {
+        <mat-error>
+          @if (newTaskForm.get('dueDate')?.errors?.['required']) { Due date is **required**. }
+          @if (newTaskForm.get('dueDate')?.errors?.['dateAfterToday']) { Due date must be greater than today. }
+        </mat-error>
+        }
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </mat-dialog-content>
+
+    <mat-dialog-actions>
+      <button matButton="filled" type="submit" [disabled]="newTaskForm.invalid || isLoading()">
+        Add Task @if(!isLoading()){
+        <mat-icon fontIcon="add_circle"></mat-icon>
+        } @else {
+        <mat-icon fontIcon="sync" class="animate-spin"></mat-icon>
+        }
+      </button>
+    </mat-dialog-actions>
+  </form>
+</div>
