--- a/src/app/components/pages/home-page/home-page.html
+++ b/src/app/components/pages/home-page/home-page.html
@@ -1,4 +1,5 @@
-<div class="h-full flex flex-col items-center justify-center gap-7 px-2 sm:px-4 sm:flex-row">
+<div class="flex flex-col items-center justify-center gap-7 px-2 sm:px-4 sm:flex-row"
+style="height: calc(100vh - 60px);">
   <div class="flex flex-col gap-5">
     <h1 class="uppercase text-2xl font-bold">
       conquer your day day.
